<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="studentLabel">Student</string>
    <string name="adminLabel">Admin</string>
   <string name="hello">Login</string>
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login</string>
   <!--  <string name="attempts">Attempts Left:</string>-->
    <string name="app_name">Find My Room</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Admin adding new courses</string>
    <string name="newcourseno">Course</string>
    <string name="newsection">Section</string>
    <string name="newclassroom">Room Number</string>
    <string name="newlandmark">Landmark</string>
    <string name="Submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="coursename_prompt">Choose a class</string>

    <string-array name="coursename_arrays">
        <item>Coursename</item>
        <item>CS6359</item>
        <item>CS6360</item>
        <item>CS6363</item>
    </string-array>

    <string name="landmarks_prompt">Choose a landmark</string>

    <string-array name="nearest_landmarks">
        <item>Nearest Landmark</item>
        <item>ECS entrance</item>
        <item>Berkner Hall entrance</item>
        <item>elevator</item>
    </string-array>

    <string name="classroom_prompt">Choose a landmark</string>
    <string name="testbutton">Testload</string>

    <string-array name="classroom_arrays">
        <item>Classroom</item>
        <item>ECSS 2.410</item>
        <item>ECSS 2.411</item>
    </string-array>

</resources>