<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".AddNewItems" 
   android:background="@color/theme">

   <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:text="@string/add"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <EditText
       android:id="@+id/courseText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView2"
       android:layout_marginLeft="32dp"
       android:layout_toRightOf="@+id/textView2"
       android:ems="10" >

      <requestFocus />
   </EditText>

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView1"
       android:layout_below="@+id/textView1"
       android:layout_marginTop="36dp"
       android:text="@string/newcourseno"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/textView2"
       android:layout_marginTop="29dp"
       android:text="@string/newsection"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView3"
       android:layout_below="@+id/textView3"
       android:layout_marginTop="31dp"
       android:text="@string/newclassroom"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/sectionText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView3"
       android:layout_alignLeft="@+id/courseText"
       android:layout_alignRight="@+id/editText4"
       android:ems="10" />

   <EditText
       android:id="@+id/landmarkText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView5"
       android:layout_alignLeft="@+id/sectionText"
       android:layout_alignRight="@+id/textView1"
       android:ems="10" />

   <Button
       android:id="@+id/btnSave"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="68dp"
       android:layout_toRightOf="@+id/textView5"
       android:text="@string/Submit" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView4"
       android:layout_below="@+id/textView4"
       android:layout_marginTop="29dp"
       android:text="@string/newlandmark"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/roomText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView4"
       android:layout_toRightOf="@+id/textView4"
       android:ems="10" />

</RelativeLayout>