<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context=".Login" 
   android:background="@color/theme" >

   <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="18dp"
      android:text="@string/hello"
      android:textStyle="bold|italic"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/textView1"
      android:layout_marginTop="50dp"
      android:text="@string/username"
      android:textStyle="bold|italic"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/userNameText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView2"
       android:textStyle="bold|italic"
       android:layout_alignLeft="@+id/button1"
       android:ems="10" >

      <requestFocus />
   </EditText>

   <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/textView2"
      android:layout_below="@+id/textView2"
      android:layout_marginTop="38dp"
      android:text="@string/password"
      android:textStyle="bold|italic"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
       android:id="@+id/passwordText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/textView3"
       android:layout_alignLeft="@+id/userNameText"
       android:ems="10"
       android:textStyle="bold|italic"
       android:inputType="textPassword" />

   <Button
       android:id="@+id/button1"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/passwordText"
       android:layout_marginTop="34dp"
       android:layout_toRightOf="@+id/textView2"
       android:textStyle="bold|italic"
       android:layout_centerVertical="true"
       android:onClick="login"
       android:text="@string/Login" />

</RelativeLayout>